# intra-day-platform

./: .gitmodules  ARCHITECTURE.md  README.md  pyproject.toml  setup_venv.sh
.github/workflows/: python-minimal-org-ci.yml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
data/native_debug/native_fail_20260215_203944/: candles.csv  config.txt
data/universe/: lse_universe.csv
scripts/: build_native_engine.sh
src/intraday_platform/: app.py  config.py
src/intraday_platform/application/ports/: __init__.py  exporters.py  market_data.py  repositories.py  selection_backend.py
src/intraday_platform/application/use_cases/: __init__.py  candle_resampler.py  daily_selection_engine.py  daily_selection_strategy.py  liquidity_filter.py  multi_strategy_engine.py  performance_analyzer.py  position_sizer.py  rolling_selection_engine.py  simulation_engine.py
src/intraday_platform/domain/: __init__.py  base.py
src/intraday_platform/domain/entities/: __init__.py  candle.py  portfolio.py  position.py  trade.py
src/intraday_platform/domain/ports/: __init__.py  position_sizing.py  strategy.py
src/intraday_platform/domain/value_objects/: __init__.py  position_sizing.py  (+3 more)
src/intraday_platform/infrastructure/: __init__.py  logging.py  native_engine.py
src/intraday_platform/presentation/: streamlit_app.py
src/minimal_package/: __init__.py  app.py
tests/: conftest.py  test_candle_resampler.py  test_daily_selection_strategy.py  test_file.py  test_momentum_vwap_strategy.py  test_performance_analyzer.py  test_position_sizer.py  test_simulation_engine.py  test_strategy_utils.py
(+18 files in other folders)
