[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intraday_platform"
dynamic = ["version"]
dependencies = [
    "pandas",
    "pydantic>=2.5",
    "yfinance>=0.2.33",
    "streamlit>=1.30",
    "plotly>=5.18"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

prod = [
    "numpy"
]

[tool.hatch.version]
path = "src/intraday_platform/__init__.py"

[project.scripts]
intraday_platform = "intraday_platform.app:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
